finalize customer registration